Enable netlify form

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ feature_row:
 
 <p>Interested in joining the MBA Alumni Alliance? Submit the form below and a committee member will respond promptly.</p>
 
-<form action="">
+<form name="join-alliance" method="POST" data-netlify="true">
   <label for="name">Name</label>
   <input type="text" id="name" name="name"></input>
 
