Enable Netlify CMS

--- a/index.html
+++ b/index.html
@@ -37,3 +37,15 @@ feature_row:
   <button type="Submit">Submit</button>
 
 </form>
+
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
